# sphinxcontrib-googlefonts

./: README.rst  pyproject.toml
.github/workflows/: continuous-integration.yml
sphinxcontrib/: googlefonts.py
tests/: test_build.py  test_import.py
tests/testdoc/: conf.py
